[gd_scene load_steps=6 format=2]

[ext_resource path="res://level-elements/family/EarthlingBase.gd" type="Script" id=1]
[ext_resource path="res://placeholder_art/kenney_platformer/Enemies/barnacle.png" type="Texture" id=2]
[ext_resource path="res://team-assets/sounds/repliikit/Henry_gotcha2_mixd.wav" type="AudioStream" id=3]
[ext_resource path="res://level-elements/family/AudioListings.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 140, 480 )

[node name="EarthlingBase" type="Node2D" index="0"]

script = ExtResource( 1 )
speed = 50.0
suspicion_cooldown_speed = 5.0
vision_length = 1000.0
darkvision_length = 400.0
audio_gap_idle = 1.0
audio_gap_alert = 1.0
audio_gap_chase = 1.0
script_idle = "res://level-elements/family/EarthlingBase_idle.gd"
script_alert = "res://level-elements/family/EarthlingBase_alert.gd"
script_chase = "res://level-elements/family/EarthlingBase_chase.gd"

[node name="some_sptrite" type="Sprite" parent="." index="0"]

position = Vector2( 10, -770 )
scale = Vector2( 3.41406, 12.0195 )
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]

position = Vector2( 20, -490 )
shape = SubResource( 1 )

[node name="Eyes" type="Position2D" parent="." index="2"]

position = Vector2( 0, -760 )

[node name="Audio2D" type="AudioStreamPlayer2D" parent="." index="3"]

position = Vector2( 10, -690 )
stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Earthlings"
area_mask = 1

[node name="Timer" type="Timer" parent="Audio2D" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AudioListings" type="Node" parent="." index="4"]

editor/display_folded = true
script = ExtResource( 4 )

[node name="idle_1" type="AudioStreamPlayer" parent="AudioListings" index="0"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="idle_2" type="AudioStreamPlayer" parent="AudioListings" index="1"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="alert_1" type="AudioStreamPlayer" parent="AudioListings" index="2"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="alert_2" type="AudioStreamPlayer" parent="AudioListings" index="3"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="alert_3" type="AudioStreamPlayer" parent="AudioListings" index="4"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="alert_4" type="AudioStreamPlayer" parent="AudioListings" index="5"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_1" type="AudioStreamPlayer" parent="AudioListings" index="6"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_2" type="AudioStreamPlayer" parent="AudioListings" index="7"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_3" type="AudioStreamPlayer" parent="AudioListings" index="8"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_4" type="AudioStreamPlayer" parent="AudioListings" index="9"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_5" type="AudioStreamPlayer" parent="AudioListings" index="10"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="chase_6" type="AudioStreamPlayer" parent="AudioListings" index="11"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Earthlings"

[node name="progress" type="ProgressBar" parent="." index="5"]

light_mask = 524288
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -60.0
margin_right = 66.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Material", "Percent", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="timeout" from="Audio2D/Timer" to="." method="_on_Timer_timeout"]


